--- a/src/app/components/todolist/todolist.component.html
+++ b/src/app/components/todolist/todolist.component.html
@@ -4,7 +4,7 @@
     <input
       type="text"
       [(ngModel)]="keyword"
-      (keyup)="doAdd($event)"
+      (keydown)="doAdd($event)"
       placeholder="添加备忘任务"
     />
   </div>
