--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
 p {
   font-family: Lato;
 }
+
+.container {
+  width: 80%;
+  background-color: cadetblue;
+  margin-left: auto;
+  margin-right: auto;
+}
