--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <p>Start editing to see some magic happen :)</p>
 
 <hr />
+
 <!-- 引入 todolist -->
-<app-todolist></app-todolist>
+<div class="container">
+  <app-todolist></app-todolist>
+</div>
